# vepyr-diffly

./: .env.example  .gitignore  AGENTS.md  README.md  e2e_testing.MD  github_issue_check.MD  pyproject.toml  requirements.txt
.agent/: CONTINUITY.md
docker/: Dockerfile.orchestrator  Dockerfile.vep  Dockerfile.vepyr  compose.yml  vepyr_runner.py
presets/: presets.toml
scripts/: bench_cache_build.py  benchmark_annotation_runtime.py  build_chr_cache.py  compare_cache.py  create_plugin_indexes.py  plugin_annotation_smoke_test.py  plugin_round_trip_test.py
src/vepyr_diffly/: chromosomes.py  cli.py  compare.py  mismatch_analysis.py  models.py  normalize.py  plugins.py  presets.py  progress.py  report.py  resources.py  runtime.py  sampling.py  schema.py  settings.py  vcf_io.py  vepyr_runner.py  worker.py
tests/: test_build_chr_cache_script.py  test_cli_plugin_compare.py  test_compare.py  test_create_plugin_indexes_script.py  test_mismatch_analysis.py  test_normalize.py  test_plugins.py  test_presets.py  test_report.py  test_resources.py  test_runtime.py  test_sampling.py  test_vepyr_runner.py
tests/fixtures/: annotated_left.vcf  annotated_multi_chrom_left.vcf  annotated_multi_chrom_right.vcf  annotated_multiallelic.vcf  annotated_right.vcf
tests/integration/: test_cli_compare_existing.py  test_cli_inspect.py
